# object-manager

./: Cargo.toml  deploy_bruker.bash  deploy_mrs.bash
.cargo/: config.toml
configs/: conf.json  conf_bruker.json  conf_bruker.toml
src/: computer.rs  configs.rs  copy_planner.rs  data_collection.rs  data_collection_bruker.rs  data_collection_mrs.rs  lib.rs  main.rs  object.rs  request.rs  resource_manager.rs  scanner.rs
