[package]
name = "object-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
array-lib = {git = "ssh://git@github.com/wyatt-A/array-lib.git", features = ["io-mrd","io-cfl","io-bruker"]}
base64 = "0.22.1"
dirs = "6.0.0"
glob = "0.3.3"
indexmap = { version = "2.13.0", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh2 = "0.9.5"
wait-timeout = "0.2.1"
walkdir = "2.5.0"
whoami = "2.1.1"
clap = { version = "4.6.0", features = ["derive"] }
headfile = {git = "ssh://git@github.com/wyatt-A/headfile.git"}
bruker-jcamp-rs = {git = "ssh://git@github.com/wyatt-A/bruker-jcamp-rs.git"}
toml = "1.0.7+spec-1.1.0"
openssl = { version = "0.10", features = ["vendored"] }